implemented comments  updated contract

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.0",
+    "@fortawesome/free-regular-svg-icons": "^6.5.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.2",
     "@openzeppelin/contracts": "^5.0.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -23,10 +28,10 @@
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "init": "^0.1.2",
-    "kubo-rpc-client": "^3.0.1",
+    "kubo-rpc-client": "^3.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
